--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "tsx watch src/build.ts",
     "clean": "node src/clean.js",
     "serve": "tsx src/server.ts",
-    "serve:watch": "tsx watch src/server.ts"
+    "serve:watch": "tsx watch src/server.ts",
+    "test": "node --test test"
   },
   "devDependencies": {
     "tsx": "^4.15.0",
